completed hero component of home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.header-bg{
+    background-color: white;
+    margin-bottom: 2rem;
+}
+
+section.hero{
+    @apply grid;
+    grid-template-columns: .45fr .55fr;
+}
